2008-12-07 Harri Pitkänen <hatapitk@iki.fi>

	* Port hyphenator and spelling suggestions to C++.

2008-12-05 Harri Pitkänen <hatapitk@iki.fi>

	* Add option -s to voikkohyphenate.

2008-11-16 Harri Pitkänen <hatapitk@iki.fi>

	* Start porting the library to C++.

2008-10-28 Harri Pitkänen <hatapitk@iki.fi>

	* Prevent totally incorrect hyphenation for "asukkaat.hoas.fi"

2008-10-25 Harri Pitkänen <hatapitk@iki.fi>

	* Small fixes, thanks to Reijo Tomperi and Cppcheck.
	* Remove porting.c.
	* Stop using deprecated option VOIKKO_OPT_ENCODING in testing tools.
	* Add voikko_next_grammar_error_ucs4 to public API.
	* Fix voikkohyphenate and voikkogc to (hopefully) work on Windows.

2008-10-19 Harri Pitkänen <hatapitk@iki.fi>

	* Refactoring and porting to C++.
	* Remove use of glibc getline function.

2008-10-18 Harri Pitkänen <hatapitk@iki.fi>

	* Refactoring and porting to C++.

2008-10-11 Harri Pitkänen <hatapitk@iki.fi>

	* Allow sentences to start with a digit.
	* Detect and handle ellipsis correctly.
	* Add option for accepting unfinished paragraphs.
	* Increase version info for 2.1.

2008-08-22 Harri Pitkänen <hatapitk@iki.fi>

	* Modify some grammar error checks to affect 2 instead of
	  1 character so that they become slightly easier to see.
	* Add option explanation_language=... to voikkogc for printing
	  human readable error explanations.
	* Fix whitespace detection in get_char_type.

2008-08-13 Harri Pitkänen <hatapitk@iki.fi>

	* Add check for missing punctuation at the end of sentence.
	* Add option VOIKKO_OPT_ACCEPT_TITLES_IN_GC.

2008-08-10 Harri Pitkänen <hatapitk@iki.fi>

	* Fix character case check after colon.

2008-08-03 Harri Pitkänen <hatapitk@iki.fi>

	* Bug fixing.
	* Add check for duplicated words.

2008-08-02 Harri Pitkänen <hatapitk@iki.fi>

	* Ignore option VOIKKO_OPT_IGNORE_DOT in sentence
	  splitting and grammar checking, but document its effects
	  on string tokenizer.
	* Various small bug fixes.
