@@ -1,3 +1,7 @@
+2008-12-10 Harri Pitkänen <hatapitk@iki.fi>
+
+	* Port sentence.c to C++.
+
 2008-12-07 Harri Pitkänen <hatapitk@iki.fi>
 
 	* Port hyphenator and spelling suggestions to C++.
